# cnn_satellite

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  Untitled.ipynb  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
paper/: cnn_satellite.tex  cnn_satellite_pres.tex  refs.bib  task_gen_paper.py
src/cnn_satellite/: __init__.py  _version.py
src/cnn_satellite/analysis/: ML_pred.py  cnn_extract_features.py  cnn_training.py  task_analysis.py
src/cnn_satellite/data/survey_data/: image_locations.dta
src/cnn_satellite/data_management/: clean_data.py  task_data_management.py
src/cnn_satellite/final/: __init__.py  task_analysis.py  task_plots.py
src/cnn_satellite/helper_codes/: aux_functions.py
tests/: test_analysis.py  test_data.py
