[metadata]
name = cnn_satellite
description = cnn_satellite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MDanialSyed/cnn_satellite
author = M.Danial Syed
author_email = s6musyed@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/MDanialSyed/cnn_satellite
    Documentation = https://github.com/MDanialSyed/cnn_satellite
    Github = https://github.com/MDanialSyed/cnn_satellite
    Tracker = https://github.com/MDanialSyed/cnn_satellite/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = ==3.9.12
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/cnn_satellite/_version.py
